# jenkinstest

./: CMakeLists.txt
add/src/: add.c
test/: unitTest.c
